[project]
name = "npr-eskulap"
version = "1.0.0"
description = "NPR Eskulap website written using Pelican."
readme = "README.md"
authors = [
    {name = "Lukasz Zmudzinski", email = "lukasz@zmudzinski.me"},
]

requires-python = "<4.0,>=3.13"
dependencies = [
    "pelican<5.0.0,>=4.11.0",
    "pyyaml<7.0.0,>=6.0.2",
    "gitpython<4.0.0,>=3.1.44",
    "markdown>=3.8",
    "babel>=2.17.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.9.1",
    "mypy<2.0.0,>=1.14.1",
    "pytest<9.0.0,>=8.3.4",
    "bandit<2.0.0,>=1.8.2",
    "pytest-mock<4.0.0,>=3.14.0",
    "pytest-cov<7.0.0,>=6.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "I",  # isort errors
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = [
    "src/core/settings.py",
    "src/tasks.py",
    "*/dto.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = ".pytest_coverage"
